sparqlify (0.2) lod2; urgency=low

  * Initial version.

 -- Claus Stadler <cstadler@informatik.uni-leipzig.de>  Mon, 09 Jul 2012 12:25:10 +0200
