@@ -1,63 +1,0 @@
-#!/bin/bash
-# This file is intended to be source'd from other scripts of the LinkedGeoData suite.
-
-# Note: We recommend to leave this file unchanged, and override these settings in a file
-# without the .dist extension
-
-dbHost="localhost"
-dbName="lgd"
-dbUser="postgres"
-dbPass="postgres"
-
-sparqlifyCmd="sparqlify"
-lgdPrepareInterlinksCmd="lgd-prepare-interlinks"
-
-for profilePath in "${profilePaths[@]}"; do
-        profileFile="$profilePath/$profileName.conf"
-        [ -f "$profileFile" ] && source "$profileFile"
-done
-
-lgdSmlPath="/usr/share/linkedgeodata/sml"
-lgdSmlFile="LinkedGeoData-Triplify-IndividualViews.sml"
-
-lgdSqlPath="/usr/share/linkedgeodata/sql"
-
-# FIXME Not sure what the best way to link to this file is
-postgisPathCandidate=`find /usr/share/postgresql/ -name postgis.sql | head -n 1`
-postgisPath=`dirname "$postgisPathCandidate"`
-#postgisPath="/usr/share/postgresql/9.1/contrib/postgis-2.0"
-
-
-osmosisSqlPath="/usr/share/doc/osmosis/examples"
-
-
-
-# If you want to load a pbf file, set the following variable, e.g:
-#osmFile=/your/path/bremen-06-03-2013.osm.pbf
-
-# You can find chunked OSM files here: http://download.geofabrik.de/openstreetmap/
-# Planet files are available at: http://planet.openstreetmap.org
-
-
-##
-# Profiles provide a convenient way switching between multiple lgd database instances on the system
-#
-#
-declare -A lgdProfilePaths
-lgdProfilePaths[0]="~/.config/linkedgeodata/profile.d"
-lgdProfilePaths[1]="~/etc/linkedgeodata/profile.d"
-lgdProfilePaths[2]="."
-
-
-##
-# Named queries provide a convenient way to execute queries on a lgd dataset
-# lgd-query
-#
-declare -A lgdNamedQueries
-
-lgdNamedQueries["ontology"]='Prefix owl:<http://www.w3.org/2002/07/owl#> Construct { ?s ?p ?o } { ?s a ?t ; ?p ?o . Filter(?t = owl:Class || ?t = owl:Property) }'
-
-lgdNamedQueries["dump"]='Construct { ?s ?p ?o } { ?s ?p ?o }'
-
-
-
