@@ -1,0 +1,6 @@
+dbHost="localhost"
+dbName="lgd"
+dbUser="postgres"
+dbPass="postgres"
+mappingFile="/usr/share/linkedgeodata/sml/lgd-default.sml"
+
