@@ -1,4 +1,0 @@
-#!/bin/bash
-
-/bin/bash /usr/share/linkedgeodata/lgd-query.sh "$@"
-
